fix huge logo on mobile

--- a/themes/digitalservices/static/css/styles.css
+++ b/themes/digitalservices/static/css/styles.css
@@ -925,6 +925,15 @@ nav .menu #menu-back {
   nav #ham {
     display: block;
   }
+
+  .logo img {
+    width: 60%;
+    margin: 0;
+  }
+
+  .navbar-brand.logo {
+    padding: 0;
+  }
 }
 
 /* Retina Display Media Query */
